--- a/Week 3 - Lecture Activity 3.1 - SimpleCircle/.project
+++ b/Week 3 - Lecture Activity 3.1 - SimpleCircle/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 3 - Lecture Activity 3.1 - SimpleCircle</name>
+	<name>Week 3 - Lecture Activity 3.1 - SimpleCircleDemo</name>
 	<comment></comment>
 	<projects>
 	</projects>
