--- a/Week 3 Lecture Activity 3.1 & 3.2/.project
+++ b/Week 3 Lecture Activity 3.1 & 3.2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 3 Lecture Activity 3.1 - Student</name>
+	<name>Week 3 Lecture Activity 3- 1.1, 1.2, 1.3 - Student - GetInfo - DisplayInfo</name>
 	<comment></comment>
 	<projects>
 	</projects>
